--- a/relatorio/capitulos/repositorio.tex
+++ b/relatorio/capitulos/repositorio.tex
@@ -1,3 +1,5 @@
-\section{Repositório}
+\section{Repositório e apresentação}
 
 O projeto pode ser encontrado em \href{https://github.com/HeckRodSav/PW-projeto}{<https://github.com/HeckRodSav/PW-projeto>}.
+
+\noindent{}O vídeo está disponível em \href{https://youtu.be/tK6dCK5OnrA}{<https://youtu.be/tK6dCK5OnrA>}.
