--- a/relatorio/images/diagrama_blocos.tex
+++ b/relatorio/images/diagrama_blocos.tex
@@ -40,7 +40,7 @@
     \end{tabular}
 };
 % Text Node
-\draw (575,148.5) node   [align=center] {Bando de dados};
+\draw (575,148.5) node   [align=center] {Banco de dados};
 
 
 \end{tikzpicture}
